Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-263

Traffic server dying

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Blocker
    • Resolution: Fixed
    • 2.1.0
    • 2.1.0
    • None
    • Ubuntu 8.04, Linux 2.6.18-028stab067.4-PAE #1 SMP Thu Jan 14 22:09:19 MSK 2010 i686 GNU/Linux - Virtuozzo VPS

    Description

      Having compiled TS, and started the server, I get the following errors both in the syslog and in traffic.out (some of the messages in traffic.out are very similar to those in the syslog) :

      in the syslog :

      Mar 20 19:36:47 tagmata traffic_cop[1795]: — Cop Starting Version: Apache Traffic Server - traffic_cop - 2.1.0 - (build # 2204 on Mar 20 2010 at 04:09:00)
      Mar 20 19:36:47 tagmata traffic_cop[1795]: traffic_manager not running, making sure traffic_server is dead
      Mar 20 19:36:47 tagmata traffic_cop[1795]: spawning traffic_manager
      Mar 20 19:36:47 tagmata traffic_manager[1797]: NOTE: — Manager Starting —
      Mar 20 19:36:47 tagmata traffic_manager[1797]: NOTE: Manager Version: Apache Traffic Server - traffic_manager - 2.1.0 - (build # 2204 on Mar 20 2010 at 04:11:51)
      Mar 20 19:36:47 tagmata traffic_manager[1797]: NOTE: RLIMIT_NOFILE(7):cur(10000),max(10000)
      Mar 20 19:36:47 tagmata traffic_manager[1797]:

      {3079632576} STATUS: opened var/log/trafficserver/manager.log
      Mar 20 19:36:47 tagmata traffic_manager[1797]: {3079632576}

      NOTE: updated diags config
      Mar 20 19:36:47 tagmata traffic_manager[1797]:

      {3079632576} NOTE: [ClusterCom::ClusterCom] Node running on OS: 'Linux' Release: '2.6.18-028stab067.4-PAE'
      Mar 20 19:36:47 tagmata traffic_manager[1797]: {3079632576}

      NOTE: [LocalManager::listenForProxy] Listening on port: 8080
      Mar 20 19:36:47 tagmata traffic_manager[1797]:

      {3079632576} NOTE: [TrafficManager] Setup complete
      Mar 20 19:36:48 tagmata traffic_manager[1797]: {3079632576}

      NOTE: [LocalManager::startProxy] Launching ts process
      Mar 20 19:36:48 tagmata traffic_manager[1797]:

      {3079632576} NOTE: [LocalManager::pollMgmtProcessServer] New process connecting fd '14'
      Mar 20 19:36:48 tagmata traffic_manager[1797]: {3079632576}

      NOTE: [Alarms::signalAlarm] Server Process born
      Mar 20 19:36:49 tagmata traffic_server[1808]: NOTE: — Server Starting —
      Mar 20 19:36:49 tagmata traffic_server[1808]: NOTE: Server Version: Apache Traffic Server - traffic_server - 2.1.0 - (build # 2204 on Mar 20 2010 at 04:13:15)
      Mar 20 19:36:49 tagmata traffic_server[1808]:

      {1080614544} STATUS: opened var/log/trafficserver/diags.log
      Mar 20 19:36:49 tagmata traffic_server[1808]: {1080614544}

      NOTE: updated diags config
      Mar 20 19:36:49 tagmata traffic_server[1808]:

      {1080614544} NOTE: cache clustering disabled
      Mar 20 19:36:49 tagmata traffic_server[1808]: {1080614544}

      NOTE: clearing statistics
      Mar 20 19:36:49 tagmata traffic_server[1808]: FATAL: ../../../../trafficserver/iocore/eventsystem/UnixEThread.cc:70: failed assert `(evfd = eventfd(0,0)) >= 0`
      Mar 20 19:36:49 tagmata traffic_manager[1797]:

      {3079632576} ERROR: [LocalManager::pollMgmtProcessServer] Server Process terminated due to Sig 6: Aborted
      Mar 20 19:36:49 tagmata traffic_manager[1797]: {3079632576}

      ERROR: (last system error 2: No such file or directory)
      Mar 20 19:36:49 tagmata traffic_manager[1797]:

      {3079632576} ERROR: [Alarms::signalAlarm] Server Process was reset
      Mar 20 19:36:49 tagmata traffic_manager[1797]: {3079632576}

      ERROR: (last system error 2: No such file or directory)
      Mar 20 19:36:50 tagmata traffic_manager[1797]:

      {3079632576} NOTE: [LocalManager::startProxy] Launching ts process
      Mar 20 19:36:50 tagmata traffic_manager[1797]: {3079632576}

      NOTE: [LocalManager::pollMgmtProcessServer] New process connecting fd '14'
      Mar 20 19:36:50 tagmata traffic_manager[1797]:

      {3079632576}

      NOTE: [Alarms::signalAlarm] Server Process born

      in traffic.out :

      [Mar 20 20:02:22.778] Manager

      {3080124096} ERROR: [LocalManager::pollMgmtProcessServer] Server Process terminated due to Sig 6: Aborted
      [Mar 20 20:02:22.778] Manager {3080124096}

      ERROR: (last system error 2: No such file or directory)
      [Mar 20 20:02:22.778] Manager

      {3080124096} ERROR: [Alarms::signalAlarm] Server Process was reset
      [Mar 20 20:02:22.778] Manager {3080124096}

      ERROR: (last system error 2: No such file or directory)
      [TrafficServer] using root directory '/simpl/apps/trafficserver/trunk'
      [Mar 20 20:02:24.830]

      {1080614544}

      STATUS: opened var/log/trafficserver/diags.log
      FATAL: ../../../../trafficserver/iocore/eventsystem/UnixEThread.cc:70: failed assert `(evfd = eventfd(0,0)) >= 0`
      bin/traffic_server - STACK TRACE:
      bin/traffic_server(ink_fatal+0x1a)[0x834b6fa]
      bin/traffic_server(_ink_assert+0x68)[0x834a898]
      bin/traffic_server(_ZN7EThreadC1E10ThreadTypei+0x3f3)[0x8344b93]
      bin/traffic_server(_ZN14EventProcessor5startEi+0x8d)[0x8345f9d]
      bin/traffic_server(main+0xaf3)[0x8117533]
      /lib/libc.so.6(__libc_start_main+0xe0)[0x40554450]
      bin/traffic_server[0x80c3231]

      The same messages are then repeated every two seconds or so.

      I used the default apt-get install's for all the dependencies, and apart from Sqlite, which uses the latest source, these files were used in the build.

      The kernel is quite an old one now, but unfortunately I cannot upgrade because my ISP doesn't offer a more recent kernel.

      Although I can telnet into the server, it won't process any requests.

      Attachments

        1. 0001-TS263_patch1.diff.patch
          1 kB
          George Paul
        2. Kernel 2.6.21.7-2 Errors log with Patch (p1).txt
          2 kB
          Sean Harmer
        3. records.config
          26 kB
          Marcus Clyne
        4. TS-263__configure.ac.patch
          1 kB
          Jason Giedymin

        Issue Links

          Activity

            People

              georgep George Paul
              eugaia Marcus Clyne
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: