TS-263: patch '0001-TS263_patch1.diff.patch'. Better handling of eventfd() for kernels <= 2.6.26.

git-svn-id: https://svn.apache.org/repos/asf/incubator/trafficserver/traffic/trunk@927940 13f79535-47bb-0310-9956-ffa450edef68