iocore/eventsystem/UnixEThread.cc
@@ -66,8 +66,16 @@ EThread::EThread(ThreadType att, int anid)
   memset(thread_private, 0, PER_THREAD_DATA);
 #ifdef HAVE_EVENTFD
   evfd = eventfd(0, O_NONBLOCK | FD_CLOEXEC);
-  if (evfd < 0)
-    ink_release_assert((evfd = eventfd(0,0)) >= 0);
+  if (evfd < 0) {
+    if (errno == EINVAL) { // flags invalid for kernel <= 2.6.26
+      evfd = eventfd(0,0);
+      if (evfd < 0) {
+        Fatal("EThread::EThread: %d=eventfd(0,0),errno(%d)",evfd,errno);
+      }
+    } else {
+      Fatal("EThread::EThread: %d=eventfd(0,O_NONBLOCK | FD_CLOEXEC),errno(%d)",evfd,errno);
+    }
+  }
   fcntl(evfd, F_SETFD, FD_CLOEXEC);
   fcntl(evfd, F_SETFL, O_NONBLOCK);
 #else
